# compression-multiplexer

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: README.md  compression_bench.rs
examples/: README.md  algorithm_selection.rs  archive_provider_integration.rs  basic_usage.rs  compress_cli.rs  compression_levels.rs
src/: bindings.rs  dispatcher.rs  lib.rs  openzl_ffi.rs  providers.rs  zstd_extras.rs
wit/: compression-multiplexer.wit  world.wit
