[package]
name = "compression-multiplexer"
version = "0.1.0"
edition = "2024"
authors = ["Tegmentum"]
license = "MIT"
description = "Compression algorithm multiplexer for WebAssembly Component Model"
build = "build.rs"

[lib]
# rlib for native library use (benches, examples); cdylib for `cargo
# component build --target wasm32-wasip2` to produce the .wasm component
# artifact wit-bindgen wraps.
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enable WebAssembly Component Model support (adds cdylib output)
component = []

[dependencies]
# Compression implementations
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
bzip2-rs = "0.1"
banzai = "0.1"
lzma-rust2 = "0.15"
lz4_flex = "0.11"
zstd = { version = "0.13", default-features = false, features = ["zdict_builder"] }

# WIT bindings (optional for native library use)
wit-bindgen = { version = "0.44", default-features = false, features = ["realloc"], optional = true }
wit-bindgen-rt = { version = "0.44", default-features = false, features = ["bitflags"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = { version = "0.44", default-features = false, features = ["realloc"] }
wit-bindgen-rt = { version = "0.44", default-features = false, features = ["bitflags"] }
zstd = { version = "0.13", default-features = false, features = ["wasm", "zdict_builder"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compression_bench"
harness = false

[package.metadata.component]
package = "tegmentum:compression-multiplexer"

[package.metadata.component.target]
path = "wit"
world = "compression-multiplexer"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip debug symbols
codegen-units = 1   # Better optimization
